# glyph

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/binate-gpu-core/: Cargo.toml
crates/binate-gpu-core/src/: layout.rs  lib.rs  signal.rs  view.rs
crates/binate-gpu-demo/: Cargo.toml
crates/binate-gpu-demo/src/: main.rs
crates/binate-gpu-native/: Cargo.toml
crates/binate-gpu-native/src/: lib.rs  macos.rs
crates/binate-gpu-platform/: Cargo.toml
crates/binate-gpu-platform/src/: app.rs  lib.rs
crates/binate-gpu-render/: Cargo.toml
crates/binate-gpu-render/src/: lib.rs  pipeline.rs  renderer.rs
crates/binate-gpu-render/src/shaders/: rect.wgsl
crates/binate-gpu-text/: Cargo.toml
crates/binate-gpu-text/src/: atlas.rs  lib.rs  renderer.rs
crates/core-glyph/: Cargo.toml
crates/core-glyph/src/: anim.rs  component.rs  layout.rs  lib.rs  node.rs  router.rs  signal.rs  theme.rs  view.rs  widget.rs
crates/demo-glyph/: Cargo.toml
crates/demo-glyph/src/: lib.rs  main.rs  main_hot.rs
crates/github-glyph/: .env  Cargo.toml
crates/github-glyph/src/: main.rs
crates/glyph/: Cargo.toml  build.rs
crates/glyph-cli/: Cargo.toml
crates/glyph-cli/src/: main.rs
crates/glyph-core/: Cargo.toml
crates/glyph-core/src/: anim.rs  component.rs  layout.rs  lib.rs  router.rs  signal.rs  theme.rs  view.rs  widget.rs
crates/glyph-demo/: Cargo.toml
crates/glyph-demo/src/: lib.rs  main.rs  main_hot.rs
crates/glyph-github/: Cargo.toml  build.rs
crates/glyph-github/src/: main.rs
crates/glyph-hot/: Cargo.toml
crates/glyph-hot/src/: abi.rs  convert.rs  guest.rs  lib.rs  loader.rs
crates/glyph-native/: Cargo.toml
crates/glyph-native/src/: lib.rs  macos.rs
crates/glyph-platform/: Cargo.toml
crates/glyph-platform/src/: app.rs  lib.rs
crates/glyph-render/: Cargo.toml
crates/glyph-render/src/: image_cache.rs  lib.rs  pipeline.rs  renderer.rs
crates/glyph-render/src/shaders/: image.wgsl  rect.wgsl  shadow.wgsl  text.wgsl
crates/glyph-text/: Cargo.toml
crates/glyph-text/src/: renderer.rs
crates/glyph-ui/: Cargo.toml
crates/glyph-ui/src/: buttons.rs  colors.rs  components.rs  layout.rs  shadows.rs  spacing.rs  themes.rs  typography.rs
crates/glyph-widgets/: Cargo.toml
crates/glyph-widgets/src/: checkbox.rs  radio.rs  select.rs  slider.rs  toggle.rs
crates/glyph/src/: lib.rs
crates/hot-glyph/: Cargo.toml
crates/hot-glyph/src/: abi.rs  convert.rs  guest.rs  loader.rs
crates/native-glyph/: Cargo.toml
crates/native-glyph/src/: macos.rs
crates/platform-glyph/: Cargo.toml
crates/platform-glyph/src/: app.rs  lib.rs  menu.rs  platform.rs
crates/render-glyph/: Cargo.toml
crates/render-glyph/src/: gpu_context.rs  image_cache.rs  lib.rs  pipeline.rs  renderer.rs
crates/render-glyph/src/shaders/: image.wgsl
crates/text-glyph/: Cargo.toml
crates/text-glyph/src/: atlas.rs  renderer.rs
crates/ui-glyph/: Cargo.toml
crates/ui-glyph/src/: buttons.rs  colors.rs  components.rs  data.rs  forms.rs  icons.rs  layout.rs  lib.rs  navigation.rs  overlays.rs  shadows.rs  themes.rs  typography.rs
crates/widgets-glyph/: Cargo.toml
crates/widgets-glyph/src/: checkbox.rs  lib.rs  radio.rs  select.rs  slider.rs  toggle.rs
