[workspace]
members = [
    "crates/glyph-core",
    "crates/glyph-render",
    "crates/glyph-text",
    "crates/glyph-platform",
    "crates/glyph-native",
    "crates/glyph-demo",
    "crates/glyph-github",
    "crates/glyph-widgets",
    "crates/glyph-hot",
    "crates/glyph-ui",
]
resolver = "2"
