[workspace]
members = [
    "crates/core-glyph",
    "crates/render-glyph",
    "crates/text-glyph",
    "crates/platform-glyph",
    "crates/native-glyph",
    "crates/demo-glyph",
    "crates/github-glyph",
    "crates/widgets-glyph",
    "crates/hot-glyph",
    "crates/ui-glyph",
]
resolver = "2"
