[package]
name = "binate-gpu-native"
version = "0.1.0"
edition = "2021"

[dependencies]
binate-gpu-core = { path = "../binate-gpu-core" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSThread"] }
objc2-app-kit    = { version = "0.2", features = [
    "NSApplication",
    "NSButton",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSGraphics",
    "NSLayoutConstraint",
    "NSResponder",
    "NSRunningApplication",
    "NSStackView",
    "NSTextField",
    "NSUserInterfaceLayout",
    "NSView",
    "NSWindow",
] }
