[package]
name = "core-glyph"
version = "0.1.0"
edition = "2021"
description = "View tree, Signal<T>, flexbox layout, and flat quad output for the Glyph UI framework"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"

[dependencies]
taffy = "0.5"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
