[package]
publish     = false
name = "demo-glyph"
version = "0.2.0"
edition = "2021"
default-run = "demo-glyph"

[[bin]]
name = "demo-glyph"
path = "src/main.rs"

[[bin]]
name = "demo-glyph-hot"
path = "src/main_hot.rs"
required-features = ["hot-reload"]

[lib]
name = "demo_glyph"
crate-type = ["cdylib", "rlib"]

[dependencies]
glyph          = { version = "0.2.0", path = "../glyph" }
# kept for hot-reload binary which needs platform-glyph directly
platform-glyph = { version = "0.2.0", path = "../platform-glyph", optional = true }
hot-glyph      = { version = "0.2.0", path = "../hot-glyph", optional = true }

[features]
hot-reload = ["hot-glyph", "platform-glyph/hot-reload"]
