[package]
name = "glyph-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for creating, building, and packaging Glyph desktop apps"
license = "MIT"

[[bin]]
name = "glyph"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
toml    = "0.8"
serde   = { version = "1", features = ["derive"] }
anyhow  = "1"
