[package]
name = "glyph-demo"
version = "0.1.0"
edition = "2021"
default-run = "glyph-demo"

[[bin]]
name = "glyph-demo"
path = "src/main.rs"

[[bin]]
name = "glyph-demo-hot"
path = "src/main_hot.rs"
required-features = ["hot-reload"]

[lib]
name = "glyph_demo"
crate-type = ["cdylib", "rlib"]

[dependencies]
glyph-core     = { path = "../glyph-core" }
glyph-platform = { path = "../glyph-platform" }
glyph-widgets  = { path = "../glyph-widgets" }
glyph-hot      = { path = "../glyph-hot", optional = true }
taffy          = "0.5"

[features]
hot-reload = ["glyph-hot", "glyph-platform/hot-reload"]
