[package]
name = "glyph-github"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glyph-github"
path = "src/main.rs"

[dependencies]
glyph-core = { path = "../glyph-core" }
glyph-platform = { path = "../glyph-platform" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
dirs = "5"
