[package]
name = "glyph-hot"
version = "0.1.0"
edition = "2021"
description = "Hot-reload dylib loader for the Glyph UI framework"
repository = "https://github.com/camslade/glyph"
license = "MIT"

[lib]
name = "glyph_hot"

[dependencies]
glyph-core = { version = "0.1.0", path = "../glyph-core" }
libloading  = "0.8"
notify      = "6"
taffy       = "0.5"
