[package]
name = "glyph-platform"
version = "0.1.0"
edition = "2021"
description = "winit event loop, hit-test, and input dispatch for the Glyph UI framework"
repository = "https://github.com/camslade/glyph"
license = "MIT"

[dependencies]
glyph-core = { version = "0.1.0", path = "../glyph-core" }
glyph-render = { version = "0.1.0", path = "../glyph-render" }
glyph-hot = { version = "0.1.0", path = "../glyph-hot", optional = true }
winit    = "0.30"
wgpu     = "22"
pollster = "0.3"

[features]
hot-reload = ["glyph-hot"]
