[package]
name = "glyph-text"
version = "0.1.0"
edition = "2021"
description = "Text shaping, glyph atlas, and measurement for the Glyph UI framework"
repository = "https://github.com/camslade/glyph"
license = "MIT"

[dependencies]
glyph-core = { version = "0.1.0", path = "../glyph-core" }
cosmic-text = "0.12"
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
