[package]
name = "glyph-ui"
version = "0.1.0"
edition = "2021"
description = "Design system: color palette, spacing tokens, typography, and component library for Glyph"
repository = "https://github.com/camslade/glyph"
license = "MIT"

[dependencies]
glyph-core = { version = "0.1.0", path = "../glyph-core" }
