[package]
name        = "glyph"
version     = "0.2.0"
edition     = "2021"
description = "A GPU-native desktop app framework for Rust — one crate, one import"
repository  = "https://github.com/camdenslade/glyph"
homepage    = "https://glyphui.dev"
license     = "MIT"
keywords    = ["gui", "ui", "desktop", "native", "gpu"]
categories  = ["gui", "graphics", "rendering"]

[dependencies]
core-glyph     = { version = "0.2.0", path = "../core-glyph" }
platform-glyph = { version = "0.2.0", path = "../platform-glyph" }
ui-glyph       = { version = "0.2.0", path = "../ui-glyph" }

[features]
default    = []
hot-reload = ["platform-glyph/hot-reload"]
