[package]
name = "hot-glyph"
version = "0.1.0"
edition = "2021"
description = "Hot-reload dylib loader for the Glyph UI framework"
repository = "https://github.com/camslade/glyph"
license = "MIT"

[lib]
name = "hot_glyph"

[dependencies]
core-glyph = { version = "0.1.0", path = "../core-glyph" }
libloading  = "0.8"
notify      = "6"
taffy       = "0.5"
