[package]
name = "native-glyph"
version = "0.2.0"
edition = "2021"
description = "macOS AppKit native bridge for the Glyph UI framework"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"
homepage    = "https://glyphui.dev"
keywords    = ["gui", "ui", "desktop", "gpu", "native"]
categories  = ["gui", "graphics"]

[dependencies]
core-glyph = { version = "0.2.0", path = "../core-glyph" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSThread"] }
objc2-app-kit    = { version = "0.2", features = [
    "NSApplication",
    "NSButton",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSGraphics",
    "NSLayoutConstraint",
    "NSResponder",
    "NSRunningApplication",
    "NSStackView",
    "NSTextField",
    "NSUserInterfaceLayout",
    "NSView",
    "NSWindow",
] }
