[package]
name = "platform-glyph"
version = "0.2.0"
edition = "2021"
description = "winit event loop, hit-test, and input dispatch for the Glyph UI framework"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"
homepage    = "https://glyphui.dev"
keywords    = ["gui", "ui", "desktop", "gpu", "native"]
categories  = ["gui", "graphics"]

[dependencies]
core-glyph   = { version = "0.2.0", path = "../core-glyph" }
render-glyph = { version = "0.2.0", path = "../render-glyph" }
hot-glyph    = { version = "0.2.0", path = "../hot-glyph", optional = true }
winit        = "0.30"
wgpu         = "22"
pollster     = "0.3"
rfd          = "0.15"
arboard      = "3"
muda = "0.19.2"

[features]
hot-reload = ["hot-glyph"]
