[package]
name = "render-glyph"
version = "0.1.1"
edition = "2021"
description = "wgpu GPU renderer for the Glyph UI framework"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"

[dependencies]
core-glyph = { version = "0.1.1", path = "../core-glyph" }
text-glyph = { version = "0.1.1", path = "../text-glyph" }
wgpu    = "22"
winit   = "0.30"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
