[package]
name = "text-glyph"
version = "0.1.1"
edition = "2021"
description = "Text shaping, glyph atlas, and measurement for the Glyph UI framework"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"

[dependencies]
core-glyph = { version = "0.1.1", path = "../core-glyph" }
cosmic-text = "0.12"
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
