[package]
name = "ui-glyph"
version = "0.1.1"
edition = "2021"
description = "Design system: color palette, spacing tokens, typography, and component library for Glyph"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"

[dependencies]
core-glyph = { version = "0.1.1", path = "../core-glyph" }
