[package]
name = "ui-glyph"
version = "0.2.1"
edition = "2021"
description = "Design system: color palette, spacing tokens, typography, and component library for Glyph"
repository = "https://github.com/camdenslade/glyph"
license = "MIT"
homepage    = "https://glyphui.dev"
keywords    = ["gui", "ui", "desktop", "gpu", "native"]
categories  = ["gui", "graphics"]

[dependencies]
core-glyph = { version = "0.2.1", path = "../core-glyph" }
